--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
     <title>Document</title>
 </head>
 <body>
+    <div>
+        <label for="grid_row">ROWS:</label>
+        <input type="number" id="grid_row">
+        <label for="grid_col">COLS:</label>
+        <input type="number" id="grid_col">
+    </div>
     
+    <script src="./script.js"></script>
 </body>
 </html>
