--- a/index.html
+++ b/index.html
@@ -8,14 +8,27 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <title>Document</title>
 </head>
-<body>
-    <div>
-        <label for="grid_row">ROWS:</label>
-        <input type="number" id="grid_row">
-        <label for="grid_col">COLS:</label>
-        <input type="number" id="grid_col">
+<body class="container">
+    <h1 class="text-center text-danger">Sketch Pad</h1>
+    <div class="row" id="hidden">
+        <div class="col-md-12">
+                <label for="grid_row">ROWS:</label>
+                <input type="number" id="input" min="1">
+        </div>
+        <div class="col-md-12">    
+                <label for="grid_col">COLS:</label>
+                <input type="number" id="input1" min="1">
+            <button id="sub_btn" onclick="show();hide()">Show</button>
+        </div>
     </div>
-    
+    <div id="show" style="visibility: hidden;">
+            <label for="color">Choose Color:</label>
+            <br><input type="color" id="color">
+            <button id="ers_btn">Erase</button>
+            <div class="sketch_pad d-flex justify-content-center" id="Pad">
+                <table id="table"></table>
+            </div>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
