--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <div class="row" id="hidden">
         <div class="col-md-12">
                 <label for="grid_row">ROWS:</label>
-                <input type="number" id="input" min="1">
+                <input type="number" id="input">
         </div>
         <div class="col-md-12">    
                 <label for="grid_col">COLS:</label>
-                <input type="number" id="input1" min="1">
+                <input type="number" id="input1">
             <button id="sub_btn" onclick="hide()">Show</button>
         </div>
     </div>
